kubernetes/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client  
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      restartPolicy: Always
      containers:
      - name: client
        image: franved/client-keycloak

        resources:
          limits:
            memory: "800Mi"
            cpu: "600m"
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: http
