kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  #replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      restartPolicy: Always
      containers:
      - name: server
        image: franved/server-keycloak

        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
  

---

apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
