kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: fra.com
    http:
      paths:
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 3000

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 5000
